# nsis-ka-0.98

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.inc  README  config.status  configure  configure.ac
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
etc/: nsis-ka.conf
ntlp/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  libgist-0.0.pc  libgist-0.0.pc.in  libtool
ntlp/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
ntlp/include/: apimessage.h  apiwrapper.h  flowinfo.h  gist_conf.h  mri.h  mri_est.h  mri_le.h  mri_pc.h  msghandle.h  nslpdata.h  ntlp_global_constants.h  ntlp_ie.h  ntlp_object.h  ntlp_starter.h  objectpool.h  poolobject.h  sessionid.h
ntlp/src/: GISTConsole.cpp  GISTConsole.h  Makefile  Makefile.am  Makefile.in  apimessage.cpp  apiwrapper.cpp  capability.cpp  capability.h  flowinfo.cpp  general_objects.cpp  general_objects.h  gist_conf.cpp  gist_exceptions.cpp  gist_exceptions.h  ntlp_global_constants.cpp  ntlp_main.cpp  ntlp_proto.cpp  ntlp_proto.h  ntlp_starter.cpp  ntlp_statemodule.h  ntlp_statemodule_api.cpp  ntlp_statemodule_data.cpp  ntlp_statemodule_main.cpp  ntlp_statemodule_querier.cpp  ntlp_statemodule_responder.cpp  routingentry.cpp  routingentry.h  routingtable.cpp  routingtable.h  secretmanager.cpp  secretmanager.h  signalingmodule_ntlp.cpp  signalingmodule_ntlp.h
ntlp/src/.deps/: gistka-ntlp_main.Po  libgist_la-GISTConsole.Plo  libgist_la-apimessage.Plo  libgist_la-apiwrapper.Plo  libgist_la-capability.Plo  libgist_la-general_objects.Plo  libgist_la-gist_conf.Plo  libgist_la-gist_exceptions.Plo  libgist_la-ntlp_global_constants.Plo  libgist_la-ntlp_proto.Plo  libgist_la-ntlp_starter.Plo  libgist_la-ntlp_statemodule_api.Plo  libgist_la-ntlp_statemodule_data.Plo  libgist_la-ntlp_statemodule_main.Plo  libgist_la-ntlp_statemodule_querier.Plo  libgist_la-ntlp_statemodule_responder.Plo  libgist_la-routingentry.Plo  libgist_la-routingtable.Plo  libgist_la-secretmanager.Plo  libgist_la-signalingmodule_ntlp.Plo
ntlp/src/pdu/: confirm.cpp  confirm.h  data.cpp  data.h  hello.cpp  hello.h  helloid.cpp  helloid.h  mri.cpp  mri_est.cpp  mri_le.cpp  mri_pc.cpp  nattraversal.cpp  nattraversal.h  nli.cpp  nli.h  nslpdata.cpp  ntlp_error.cpp  ntlp_error.h  ntlp_errorobject.cpp  ntlp_errorobject.h  ntlp_ie.cpp  ntlp_object.cpp  ntlp_pdu.cpp  ntlp_pdu.h  query.cpp  query.h  query_cookie.cpp  query_cookie.h  resp_cookie.cpp  resp_cookie.h  response.cpp  response.h  sessionid.cpp  stackconf.cpp  stackconf.h  stackprop.cpp  stackprop.h
ntlp/src/pdu/.deps/: libgist_la-confirm.Plo  libgist_la-data.Plo  libgist_la-hello.Plo  libgist_la-helloid.Plo  libgist_la-mri.Plo  libgist_la-mri_est.Plo  libgist_la-mri_le.Plo  libgist_la-mri_pc.Plo  libgist_la-nattraversal.Plo  libgist_la-nli.Plo  libgist_la-nslpdata.Plo  libgist_la-ntlp_error.Plo  libgist_la-ntlp_errorobject.Plo  libgist_la-ntlp_ie.Plo  libgist_la-ntlp_object.Plo  libgist_la-ntlp_pdu.Plo  libgist_la-query.Plo  libgist_la-query_cookie.Plo  libgist_la-resp_cookie.Plo  libgist_la-response.Plo  libgist_la-sessionid.Plo  libgist_la-stackconf.Plo  libgist_la-stackprop.Plo
ntlp/test/: Makefile  Makefile.am  Makefile.in  README  mri_pc.cpp  responder_cookie.cpp  sessionid.cpp  test_flowinfo.cpp  test_runner.cpp  test_suite.cpp
protlib/: Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  libfastqueue-0.0.pc  libfastqueue.pc  libfastqueue.pc.in  libprot-0.0.pc  libprot-0.0.pc.in  libprot.pc  libtool
protlib/autom4te.cache/: output.0  output.1  output.2  output.3  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
protlib/fastqueue/: Makefile  Makefile.am  Makefile.in  eclock_gettime.c  fastqueue.c  fastqueue.h  testqueue.c
protlib/fastqueue/.deps/: libfastqueue_la-eclock_gettime.Plo  libfastqueue_la-fastqueue.Plo
protlib/include/: address.h  assocdata.h  assocdata_uds.h  cleanuphandler.h  configfile.h  configpar.h  configpar_repository.h  configuration.h  connectionmap.h  connectionmap_uds.h  fqueue.h  ie.h  llhashers.h  logfile.h  messages.h  network_message.h  protlib_types.h  queuemanager.h  readnl.h  setuid.h  test_util.h  threads.h  threadsafe_db.h  timer.h  timer_module.h  tp.h  tp_over_sctp.h  tp_over_tcp.h  tp_over_tls_tcp.h  tp_over_udp.h  tp_over_uds.h  tp_queryencap.h  tp_queryencap_nfq.h  tperror.h
protlib/src/: Makefile  Makefile.am  Makefile.in  address.cpp  addresslist.cpp  cmsghdr_util.cpp  cmsghdr_util.h  configfile.cpp  configpar.cpp  configpar_repository.cpp  configuration.cpp  connectionmap.cpp  connectionmap_uds.cpp  fqueue.cpp  ie.cpp  logfile.cpp  messages.cpp  network_message.cpp  queuemanager.cpp  readnl.cpp  setuid.cpp  threads.cpp  threadsafe_db.cpp  timer.cpp  timer_module.cpp  tp.cpp  tp_over_sctp.cpp  tp_over_tcp.cpp  tp_over_tls_tcp.cpp  tp_over_udp.cpp  tp_over_uds.cpp  tp_queryencap.cpp  tp_queryencap_nfq.cpp
protlib/src/.deps/: libprot_la-address.Plo  libprot_la-addresslist.Plo  libprot_la-cmsghdr_util.Plo  libprot_la-configfile.Plo  libprot_la-configpar.Plo  libprot_la-configpar_repository.Plo  libprot_la-configuration.Plo  libprot_la-connectionmap.Plo  libprot_la-connectionmap_uds.Plo  libprot_la-fqueue.Plo  libprot_la-ie.Plo  libprot_la-logfile.Plo  libprot_la-messages.Plo  libprot_la-network_message.Plo  libprot_la-protlib_types.Plo  libprot_la-queuemanager.Plo  libprot_la-readnl.Plo  libprot_la-routing_util.Plo  libprot_la-setuid.Plo  libprot_la-threads.Plo  libprot_la-threadsafe_db.Plo  libprot_la-timer.Plo  libprot_la-timer_module.Plo  libprot_la-tp.Plo  libprot_la-tp_over_tcp.Plo  libprot_la-tp_over_tls_tcp.Plo  libprot_la-tp_over_udp.Plo  libprot_la-tp_over_uds.Plo  libprot_la-tp_queryencap_nfq.Plo
protlib/test/: Makefile  Makefile.am  Makefile.in  README  basic.cpp  fqueue.cpp  netmsg.cpp  queue_manager.cpp  test_address.cpp  test_runner.cpp  test_template.cpp  test_tp_over_xyz.cpp  test_types.cpp  timer_module.cpp
